tests/ui/associated-type-bounds/return-type-notation/basic.without.stderr
warning: the feature `return_type_notation` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/basic.rs:5:12
   |
LL | #![feature(return_type_notation)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #109417 <https://github.com/rust-lang/rust/issues/109417> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: future cannot be sent between threads safely
  --> $DIR/basic.rs:23:13
   |
LL |     is_send(foo::<T>());
   |             ^^^^^^^^^^ future returned by `foo` is not `Send`
   |
   = help: within `impl Future<Output = Result<(), ()>>`, the trait `Send` is not implemented for `impl Future<Output = Result<(), ()>> { <T as Foo>::method() }`
note: future is not `Send` as it awaits another future which is not `Send`
  --> $DIR/basic.rs:13:5
   |
LL |     T::method().await?;
   |     ^^^^^^^^^^^ await occurs here on type `impl Future<Output = Result<(), ()>> { <T as Foo>::method() }`, which is not `Send`
note: required by a bound in `is_send`
  --> $DIR/basic.rs:17:20
   |
LL | fn is_send(_: impl Send) {}
   |                    ^^^^ required by this bound in `is_send`

error: aborting due to previous error; 1 warning emitted

